Fix for large gaps between methods

--- a/src/less/website/base.less
+++ b/src/less/website/base.less
@@ -485,3 +485,9 @@ transition: all 0.3s;
   background-color: #fff !important;
   border-left: 1px solid #fff !important;
 }
+.mm-method-code{
+  min-height: inherit !important;
+}
+.mm-method-code .api-method-example{
+  margin-top: 15px;
+}
